; ModuleID = '/home/carl/AnghaBench/linux/drivers/edac/extr_amd64_edac.c_free_mc_sibling_devs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/edac/extr_amd64_edac.c_free_mc_sibling_devs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amd64_pvt = type { i32, i32, i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amd64_pvt*)* @free_mc_sibling_devs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_mc_sibling_devs(%struct.amd64_pvt* %0) #0 {
  %2 = alloca %struct.amd64_pvt*, align 8
  store %struct.amd64_pvt* %0, %struct.amd64_pvt** %2, align 8
  %3 = load %struct.amd64_pvt*, %struct.amd64_pvt** %2, align 8
  %4 = getelementptr inbounds %struct.amd64_pvt, %struct.amd64_pvt* %3, i32 0, i32 4
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.amd64_pvt*, %struct.amd64_pvt** %2, align 8
  %9 = getelementptr inbounds %struct.amd64_pvt, %struct.amd64_pvt* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @pci_dev_put(i32 %10)
  %12 = load %struct.amd64_pvt*, %struct.amd64_pvt** %2, align 8
  %13 = getelementptr inbounds %struct.amd64_pvt, %struct.amd64_pvt* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @pci_dev_put(i32 %14)
  br label %25

16:                                               ; preds = %1
  %17 = load %struct.amd64_pvt*, %struct.amd64_pvt** %2, align 8
  %18 = getelementptr inbounds %struct.amd64_pvt, %struct.amd64_pvt* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @pci_dev_put(i32 %19)
  %21 = load %struct.amd64_pvt*, %struct.amd64_pvt** %2, align 8
  %22 = getelementptr inbounds %struct.amd64_pvt, %struct.amd64_pvt* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @pci_dev_put(i32 %23)
  br label %25

25:                                               ; preds = %16, %7
  ret void
}

declare dso_local i32 @pci_dev_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
